cabal-version:       3.0

name:                thiccrv32
version:             0.1.0.0
license-file:        LICENSE
author:              Øystein Hovind
maintainer:          hovindo@gmail.com
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md

common common-options
  default-extensions:
    DataKinds,
    DeriveAnyClass,
    DeriveGeneric,
    DuplicateRecordFields,
    NoImplicitPrelude,
    TypeFamilies,
    TypeOperators,
  ghc-options:
    -fexpose-all-unfoldings
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fno-worker-wrapper
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
    -Wall -Wcompat
  default-language:  Haskell2010
  build-depends:
    base,
    clash-prelude >= 1.2.4 && < 1.3,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

library
  import:            common-options
  exposed-modules:
    Core,
    Clash.RISCV,
    Clash.RISCV.Asm
  hs-source-dirs:    src

executable clash
  main-is:           bin/Clash.hs
  ghc-options:
    -dynamic
  build-depends:
    base,
    clash-ghc,
    thiccrv32,
  default-language:  Haskell2010

executable clashi
  main-is:           bin/Clashi.hs
  ghc-options:
    -dynamic
  build-depends:
    base,
    clash-ghc,
    thiccrv32,
  default-language:  Haskell2010
