cabal-version:       3.0

name:                thiccrv32
version:             0.1.0.0
license-file:        LICENSE
author:              Øystein Hovind
maintainer:          hovindo@gmail.com
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md

common common-options
  default-extensions:
    BinaryLiterals,
    DataKinds,
    DeriveAnyClass,
    DeriveGeneric,
    DuplicateRecordFields,
    NoImplicitPrelude,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
  ghc-options:
    -fexpose-all-unfoldings
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fno-worker-wrapper
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
    -Wall -Wcompat
  default-language:  Haskell2010
  build-depends:
    base,
    clash-prelude >= 1.2.5 && < 1.6,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

library
  import:            common-options
  exposed-modules:
    Core,
    Clash.RISCV,
    Clash.RISCV.Asm,
    Clash.RISCV.Decode
  hs-source-dirs:    src

executable clash
  main-is:           bin/Clash.hs
  ghc-options:
    -dynamic
  build-depends:
    base,
    clash-ghc,
    thiccrv32,
  default-language:  Haskell2010

executable clashi
  main-is:           bin/Clashi.hs
  ghc-options:
    -dynamic
  build-depends:
    base,
    clash-ghc,
    thiccrv32,
  default-language:  Haskell2010

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: Test.hs
  other-modules:
    Tests.Clash.RISCV.Decode
    Tests.Clash.RISCV.Spec
  build-depends:
    thiccrv32,
    binary-strict,
    bytestring,
    directory,
    elf,
    hedgehog,
    QuickCheck,
    tasty,
    tasty-hedgehog,
    tasty-hunit,
